--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -359,8 +359,8 @@
     "\n",
     "\n",
     "def question_7(input):\n",
-    "    sol1, sol2, sol3 = np.split(input, 3)\n",
-    "    return sol1,sol2,sol3\n",
+    "    sub = np.split(input, 3)\n",
+    "    return sub\n",
     "    # Expected: return [q7_sol_1, q7_sol_2, q7_sol_3]\n",
     "    raise NotImplementedError\n",
     "\n",
